feat(reservation): adicionar funcionalidades para criação e consulta de reservas
